--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="container" id="transformContainer">
-    <p id="content">Click to get a mood</p>
-    <img id="image" src="principal.png" alt="Happy Image">
+    <p id="content">Find out what's my mood!</p>
+    <img id="image" src="scale.jpeg" alt="Happy Image">
   </div>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
