--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
   <title>Mood Transformation</title>
 </head>
 <body>
+  <header>
+    <h1>Mood Transformation</h1>
+  </header>
+
   <div class="container" id="transformContainer">
     <p id="content">Find out what's my mood!</p>
     <img id="image" src="scale.jpeg" alt="Happy Image">
   </div>
+
+  <footer>
+    <p>&copy; 2024 Mood Transformation. All rights reserved.</p>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="script.js"></script>
